--- a/documentation/docs/pages/operators/tools.mdx
+++ b/documentation/docs/pages/operators/tools.mdx
@@ -59,7 +59,7 @@ There are two ways how to run the program. fully interactive or with provided ar
 ./nym-node-cli.py install
 ```
 
-2. Use arguments - this command to see all options:
+2. Use arguments - run this command to see all options:
 ```sh
 ./nym-node-cli.py install --help
 ```
