update explorer part

--- a/documentation/docs/pages/operators/tools.mdx
+++ b/documentation/docs/pages/operators/tools.mdx
@@ -27,9 +27,11 @@ Nym Network stats can be humanly read on some of the explorers and dashboards.
 
 - **[SpectreDAO Explorer](https://explorer.nym.spectredao.net/):** By operators for operators - currently the most used Nym explorer
 
-- **[Nymesis](https://nymesis.vercel.app/):** A slick dashboard by operator community
+- **[Nym Node Status Observatory](https://harbourmaster.nymtech.net/):** An explorer with a list of Nym Nodes, their probe and per node data 
 
-- **[Nym Harbourmaster](https://harbourmaster.nymtech.net/):** A dashboard showing results of Gateway probes and more (*in development*)
+- **[Nym Node Status UI](https://node-status.nym.com/):** A dashboard displaying results of Gateway probes and much more in one table
+
+- **[Nymesis](https://nymesis.vercel.app/):** A slick dashboard by operator community
 
 ## Nym Node CLI
 
