update explorer part

--- a/documentation/docs/pages/operators/tools.mdx
+++ b/documentation/docs/pages/operators/tools.mdx
@@ -27,7 +27,7 @@ Nym Network stats can be humanly read on some of the explorers and dashboards.
 
 - **[SpectreDAO Explorer](https://explorer.nym.spectredao.net/):** By operators for operators - currently the most used Nym explorer
 
-- **[Nym Node Status Observatory](https://harbourmaster.nymtech.net/):** An explorer with a list of Nym Nodes, their probe and per node data 
+- **[Nym Node Status Observatory](https://harbourmaster.nymtech.net/):** An explorer with a list of Nym Nodes, their properformance and per node data 
 
 - **[Nym Node Status UI](https://node-status.nym.com/):** A dashboard displaying results of Gateway probes and much more in one table
 
