--- a/documentation/docs/pages/operators/tools.mdx
+++ b/documentation/docs/pages/operators/tools.mdx
@@ -83,7 +83,7 @@ There are two ways how to run the program. fully interactive or with provided ar
 
 ###### 4. Read and follow the prompts
 
-There will be a few needed confirmations and in caser of running the program without the arguments, you will be prompted for values neccessary to setup a `nym-node` and configure your server.
+There ware a few required confirmations and in case of running the program without the arguments, you will be prompted for values neccessary to setup a `nym-node` and configure your server.
 
 **Read these prompts carefully!**
 
