--- a/documentation/docs/pages/operators/orchestration/ansible.mdx
+++ b/documentation/docs/pages/operators/orchestration/ansible.mdx
@@ -205,7 +205,7 @@ cd playbooks
 ansible-playbook bond.yml
 ```
 
-###### 3. upgrade
+###### 3. Upgrade
 
 A playbook to upgrade `nym-node` binary to the *Latest* by default. Operators can hard code a specific binary version in `roles/upgrade/defaults/main.yml` by un-commenting the `nym-version` line and providing their desired version. 
 
