--- a/documentation/docs/pages/operators/orchestration/ansible.mdx
+++ b/documentation/docs/pages/operators/orchestration/ansible.mdx
@@ -82,7 +82,7 @@ Now you have the template of Ansible playbook for `nym-node` remote administrati
 
 ## Configuration
 
-After [getting the ansible Nym node playbpook](#ansible-installation) to your location, it's time to configure it for your own needs. 
+After [getting the ansible Nym node playbbook](#ansible-installation) to your location, it's time to configure it for your own needs. 
 
 > Mind that *idempotency* is an essential character when dealing with orchestration. A playbook, even when run many times should ensure that state of your targeted system will not change from what you intended. Therefore, it is important to make sure that all tasks in your playbook do not change the system in any way if the change you required has already been applied.
 
