finish PR for review

--- a/documentation/docs/pages/operators/changelog.mdx
+++ b/documentation/docs/pages/operators/changelog.mdx
@@ -59,7 +59,8 @@ During December operators were active in voting about new ports and changes in t
 
 **As agreed in [NIP-4](https://forum.nym.com/t/nip-4-nym-exit-policy-update-opening-port-587/2029/2) and [NIP-6](https://forum.nym.com/t/nip-6-nym-exit-policy-update-opening-ports-for-whatsapp-and-session/2042/1), we are opening these ports on [Nym exit policy](https://nymtech.net/.wellknown/network-requester/exit-policy.txt):**
 ```ini
-*:587 (SMTP)
+*:465 (SMTPTLS)
+*:587 (SMTPSubmission)
 *:22021(Session)
 *:3478 (WhatsApp)
 *:3480 (WhatsApp)
