correct nym buy info

--- a/documentation/docs/pages/operators/nodes/preliminary-steps/wallet-preparation.mdx
+++ b/documentation/docs/pages/operators/nodes/preliminary-steps/wallet-preparation.mdx
@@ -11,7 +11,13 @@ If pre-compiled binaries for your operating system aren't available, you can bui
 
 If you don't already have one, please create a Nym address using the wallet, and fund it with NYM tokens. The minimum amount required to bond a node is 100 `NYM`, but make sure you have a bit more to account for gas costs.
 
-`NYM` can be purchased via [Bity](https://bity.com) from the wallet itself with BTC or fiat, and is currently present on several [exchanges](https://www.coingecko.com/en/coins/nym#markets).
+`NYM` can be swapped in these places:
+
+- [SpectreDAO Swap](https://explorer.nym.spectredao.net/swap) (1000+ tokens supported) 
+- [Binance bridge](https://bridge.nym.com/)
+- [ERC20 bridge](https://swapper.nym.com/swap) - follow [this guide](https://nym.com/blog/nym-for-nym-swapper-app-bridges-native-and-erc20-token)
+
+`NYM` can be also bought on several [exchanges](https://www.coingecko.com/en/coins/nym#markets).
 
 > Remember that you can **only** use Cosmos `NYM` tokens to bond your node. You **cannot** use ERC20 representations of `NYM` to run a node.
 
