--- a/documentation/docs/pages/operators/changelog.mdx
+++ b/documentation/docs/pages/operators/changelog.mdx
@@ -69,7 +69,7 @@ cargo Profile:      release
 
 ### Operators Updates & Tools
 
-We’re excited to announce that the first **nym-node release of 2026 **. 
+We’re excited to announce that the first **nym-node release of 2026**. 
 
 In December 2025, two NIP proposals were approved, introducing new ports to Nym network: [NIP-6](https://governator.nym.com/proposal/prop-ba886b9d-6f6e-4365-b4ed-fe7e604bc375) opening ports for WhatsApp and Session + Port `465` and [NIP-4:](https://governator.nym.com/proposal/prop-ca6726ea-38b1-4568-97fe-8bdc5fdc83a0), opening port `587`.
 
@@ -78,10 +78,11 @@ In December 2025, two NIP proposals were approved, introducing new ports to Nym 
 To implement the changes and ensure that the nodes have expected perfomance, please re-run NTM following thse steps:
 
 <Steps>
-###### 1. Get new NTM
+###### 1. Get the new NTM
 - Download the updated NTM and make executable
-```
-curl -L https://raw.githubusercontent.com/nymtech/nym/refs/heads/develop/scripts/nym-node-setup/network-tunnel-manager.sh -o ./network-tunnel-manager.sh && chmod +x network-tunnel-manager.sh
+```sh
+curl -L https://raw.githubusercontent.com/nymtech/nym/refs/heads/develop/scripts/nym-node-setup/network-tunnel-manager.sh -o ./network-tunnel-manager.sh && \
+chmod +x network-tunnel-manager.sh
 ```
 
 ###### 2. Update exit policy
