--- a/documentation/docs/pages/operators/changelog.mdx
+++ b/documentation/docs/pages/operators/changelog.mdx
@@ -75,7 +75,7 @@ In December 2025, two NIP proposals were approved, introducing new ports to Nym 
 
 **Due to the concerns raised by the operators we built a rate limiting function to Network tunnel manager (NTM) to prevent spam abuse of the network. You can see the changes [here](https://github.com/nymtech/nym/pull/6317).** 
 
-To implement the changes and ensure that the nodes have expected perfomance, please re-run NTM following thse steps:
+To implement the changes and ensure that the nodes have expected perfomance, please re-run NTM following these steps:
 
 <Steps>
 ###### 1. Get the new NTM
