--- a/documentation/docs/pages/operators/changelog.mdx
+++ b/documentation/docs/pages/operators/changelog.mdx
@@ -71,11 +71,13 @@ cargo Profile:      release
 
 We’re excited to announce the first **nym-node release of 2026**. 
 
+**Exit Policy Ports Management**
+
 In December 2025, two NIP proposals were approved, introducing new ports to Nym network: [NIP-6](https://governator.nym.com/proposal/prop-ba886b9d-6f6e-4365-b4ed-fe7e604bc375) opening ports for WhatsApp and Session + Port `465` and [NIP-4:](https://governator.nym.com/proposal/prop-ca6726ea-38b1-4568-97fe-8bdc5fdc83a0), opening port `587`.
 
 **Due to the concerns raised by the operators we built a rate limiting function to Network tunnel manager (NTM) to prevent spam abuse of the network. You can see the changes [here](https://github.com/nymtech/nym/pull/6317).** 
 
-To implement the changes and ensure that the nodes have expected perfomance, please re-run NTM following these steps:
+To implement the changes and ensure that the nodes have expected performance, please re-run NTM following these steps:
 
 <Steps>
 ###### 1. Get the new NTM
@@ -91,6 +93,15 @@ chmod +x network-tunnel-manager.sh
 ./network-tunnel-manager.sh complete_networking_configuration
 ```
 </ Steps>
+
+**Node Orchestration**
+
+Nym network scaling is done mostly by squads, organizations, DAOs and other entities of collaborating operators administrating multiple nodes. To improve efficiency, user experience and cost we added a new menu item [*Orchestration*](/operators/orchestration) where you can find step by step guides to:
+
+- [Virtualise server using KVM](/operators/nodes/preliminary-steps/vps-setup/advanced): Creating VMs with desired size, bandwidth and capacity for lower cost in comparison to renting VPS
+- [Ansible guide](/operators/orchestration/ansible): Orchestrating endless nodes using the [Ansible template](https://github.com/nymtech/nym/tree/develop/ansible/nym-node)
+
+Please, let us know how that worked for you.
 
 ### Features
 
@@ -4523,7 +4534,7 @@ done
     - Top routing score now includes:
         - Wireguard registration and complete handshake test, to configure see [tasklist below](#operators-tasks)
         - DNS resolution check, to configure see [tasklist below](#operators-tasks)
-        - Wireguard perfomance bigger than 0.75, to configure see [tasklist below](#operators-tasks)
+        - Wireguard performance bigger than 0.75, to configure see [tasklist below](#operators-tasks)
 
 - New [Nym Wallet](https://github.com/nymtech/nym/releases/tag/nym-wallet-v1.2.14) is out!
     - Vesting contract functionalities have been purged, users can only remove tokens from vesting
